test/spec_vectors/align64/ok/module_1.wat
(module (memory i64 0) (func (drop (i32.load8_u align=1 (i64.const 0)))))